coreaudio: don't call AudioUnit API from the render callback

It is very unlikely that AudioUnitGetProperty(kAudioUnitProperty_Latency) can
change midstream (contrary to [AVInstance outputLatency]), so only fetch
this latency when starting the AudioUnit.

This fixes a deadlock between the render callback and AudioUnitStop().

Fixes #27591